fixing scrollbars

--- a/src/Components/Tablas/tablaStock.module.css
+++ b/src/Components/Tablas/tablaStock.module.css
@@ -4,6 +4,24 @@
     overflow: hidden;
 }
 
-.MuiButtonBase-root {
-    overflow: hidden !important;
+.tabla>div::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+    border-radius: 100%;
+    position: absolute;
+}
+
+.tabla>div::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+}
+
+.tabla>div::-webkit-scrollbar-thumb {
+    background-color: rgb(141, 141, 141);
+    border-radius: 5px;
+
+}
+
+.tabla>div::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    cursor: pointer;
 }
